# xanos-client

./: README.md
code/: Cargo.toml  build.rs  xanos.slint
code/src/: main.rs
code/ui/: side_bar.slint
code/ui/pages/: home_page.slint  pages.slint  welcome_page.slint
