[package]
name = "XanosClient"
version = "0.1.0"
authors = ["XandrCopyrighted <jaydontnelff@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "main.rs"
name = "xanos"

[dependencies]
slint = "1.0.2"

[build-dependencies]
slint-build = "1.0.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*